2001-09-21  Glynn Foster <glynn.foster@sun.com>

	* test-ditem.c: (test_ditem): Fix up this to pass the right 
	  number of args to gnome_desktop_item_get_type () and 
          gnome_desktop_item_set_localestring ()

Thu Sep 20 16:38:11 2001  George Lebl <jirka@5z.com>

	* gnome-desktop-item.[ch]: make sure name/encoding/version are set,
	  location return is now const, and some better checks.  Also fix
	  saving 'under' and some 'modified' logic

	* gnome-ditem-edit.h: fix comment

Thu Sep 20 15:15:54 2001  George Lebl <jirka@5z.com>

	* gnome-desktop-item.[ch]: string vector const weirdness removed

Wed Sep 19 01:42:13 2001  George Lebl <jirka@5z.com>

	* gnome-desktop-item.c, gnome-ditem-edit.c: eeek, exported an
	  internal function.

Tue Sep 18 23:11:33 2001  George Lebl <jirka@5z.com>

	* gnome-desktop-item.[ch]: Few more accessors, whack the push/pop
	  of sections.  Keys can now include sections, add actual error
	  returns

	* gnome-ditem-edit.[ch]: whack crack entries, make compile, and port
	  to new desktop item.

	* Makefile.am: add the ditem-edit

Sat Sep 08 01:55:29 2001  George Lebl <jirka@5z.com>

	* All bonobo stuff.  Removed for now.  This is in bonobo somewhere
	  now anyway.

	* Makefile.am: Fixup for the current no-bonobo build

	* gnome-desktop-item.[ch], test-ditem.c:  Made loading/saving work
	  and add tests

	* gnome-ditem-edit.[ch]: Add this, currently the same version that
	  was the last working one in libgnomeui HEAD.  Doesn't compile nor
	  work with the ditem yet.

Fri Sep 07 21:43:34 2001  George Lebl <jirka@5z.com>

	* gnome-desktop-item.[ch]: Put the parser into the ditem, completely
	  reshuffle the API, make it be much more anal about how it reads
	  files, simplify internal storage, and follow the spec more closely,
	  not api nor implementation complete.  Still needs a lot of work.
	  A .desktop moniker should rather be based upon this API rather
	  then being beneath it.  However that's very low on my priority list