@@ -100,6 +100,9 @@ GnomeDesktopItem *gnome_ditem_edit_get_ditem    (GnomeDItemEdit   *dee);
 gchar *           gnome_ditem_edit_get_icon     (GnomeDItemEdit   *dee);
 gchar *           gnome_ditem_edit_get_name     (GnomeDItemEdit   *dee);
 
+/* eeeeeeeeek!, evil api */
+void              gnome_ditem_edit_grab_focus   (GnomeDItemEdit   *dee);
+
 G_END_DECLS
    
 #endif /* GNOME_DITEM_EDIT_H */
