@@ -1,3 +1,10 @@
+Fri Sep 21 12:14:06 2001  George Lebl <jirka@5z.com>
+
+	* gnome-desktop-item.h: include gobject/gtype.h
+
+	* gnome-ditem-edit.[ch]: include evil api to grab focus, to be
+	  replaced by a correct way to do this in the future.
+
 2001-09-21  Glynn Foster <glynn.foster@sun.com>
 
 	* test-ditem.c: (test_ditem): Fix up this to pass the right 
